crates/aven-check/tests/fixtures/check/valid/comptime-required.av
User = { name: Text, email: Text }
partial = (object) => { keysOf(object) -> k; [k]?: object[k] }
required = (object) => { keysOf(object) -> k; [k]: object[k] }
Restored = required(partial(User))
x : Restored = { name: "Ada", email: "ada@x.dev" }
