crates/aven-check/tests/fixtures/check/invalid/pick-row-mismatch.av
User = { name: Text, email: Text }
u : User = { name: "a", email: "b" }
bad : { phone: Text } = pick(u, @{"name"})
